Fixed footer input on safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -714,6 +714,10 @@ input[type="search"]::-webkit-search-results-button {
   display: -ms-flexbox;
   display: flex; }
   .flex-field input {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     margin-right: .5em; }
 
 ::-webkit-input-placeholder {
