--- a/assets/scss/base/_forms.scss
+++ b/assets/scss/base/_forms.scss
@@ -105,6 +105,7 @@ input[type="search"]::-webkit-search-results-button {
 	display: flex;
 
 	input {
+		flex: 1;
 		margin-right: .5em;
 	}
 }
